# AdhaanGUI

./: Cargo.toml  LICENSE.md  build.rs
AdhaanGUI/: config.toml
AdhaanGUI/themes/: Default.theme.toml
src/: app_state.rs  config.rs  main.rs  ui.rs  ui_about.rs  ui_main.rs  ui_settings.rs  utils.rs
src/widgets/: button.rs
