[package]
name = "adhaan-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adhaan = { git = "https://github.com/RagibHasin/adhaan.git", rev = "953cfa8d4da3ac0190d498cbbd90a49c17ffb623" }
anyhow = "1.0.44" 
chrono = "0.4.19" 
druid = { git = "https://github.com/RagibHasin/druid.git", branch = "show-in-taskbar-et-always-on-top", features = ["raw-win-handle"] }
druid-shell = { git = "https://github.com/RagibHasin/druid.git", branch = "show-in-taskbar-et-always-on-top", features = ["raw-win-handle"] }
extract = { git = "https://github.com/RagibHasin/extract.git" }
kurbo = "0.8.2"
serde = { version = "1.0.130", features = ["derive"] }
toml = "0.5.8"
tracing = "0.1.29"

[target.'cfg(target_os="windows")'.dependencies]
trayicon = "0.1.1"
winapi = { version = "0.3.9" }
#features = ["d2d1_1", "dwrite", "winbase", "libloaderapi", "errhandlingapi", "winuser",
#            "shellscalingapi", "shobjidl", "combaseapi", "synchapi", "dxgi1_3", "dcomp",
#            "d3d11", "dwmapi", "wincon", "fileapi", "processenv", "winbase", "handleapi",
#            "shellapi", "winnls"]